--- a/config.toml
+++ b/config.toml
@@ -54,15 +54,15 @@ style = "github-dark"
   url = "https://www.linkedin.com/in/nisedo/"
 
 # Menu links
-[[menu.main]]
-  name = "Audits"
-  weight = 1
-  url  = "audits/"
-[[menu.main]]
-  name = "Projects"
-  weight = 2
-  url  = "projects/"
-[[menu.main]]
-  name = "About Me"
-  weight = 3
-  url = "aboutme/"
+# [[menu.main]]
+#   name = "Audits"
+#   weight = 1
+#   url  = "audits/"
+# [[menu.main]]
+#   name = "Projects"
+#   weight = 2
+#   url  = "projects/"
+# [[menu.main]]
+#   name = "About Me"
+#   weight = 3
+#   url = "aboutme/"
