--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ style = "github-dark"
 
 [params]
   author = "nisedo"
-  info = "Blockchain Security Researcher"
+  info = "Smart Contract Auditor"
   description = "nisedo's personal website"
   keywords = "blog,engineer, developer,auditor,smart contract,blockchain,solidity"
   avatarurl = "https://avatars.githubusercontent.com/u/73041332?v=4"
